Revert "Refactor: migrate to typed-jni-rs"
This reverts commit 3a982caa9015de34f71297ca0aefcbafe190e069.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,5 @@ v4 = []
 default = ["v2"]
 
 [dependencies]
-typed-jni = { git = "https://github.com/Kr328/typed-jni-rs.git", default-features = false }
+jni-sys = "0.4"
 libc = "0.2"
-rustix = "0.38"
